--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-sqlite-storage"
-    version="2.5.1">
+    id="cordova-sqlite-storage-commoncore"
+    version="1.0.0-pre1">
 
-    <name>Cordova sqlite storage plugin</name>
+    <name>Cordova sqlite storage plugin - cordova-sqlite-storage-commoncore version branch</name>
 
     <license>MIT</license>
 
