cordova-sqlite-storage-commoncore 1.0.0
NOTE that this version branch is currently known to require
slightly older Cordova CLI version such as cordova@8,
cordova@7, or cordova@6 in order to install properly due
to use of an obsolete Cordova module.

This is not an issue with recent versions of
cordova-sqlite-storage itself.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-sqlite-storage-commoncore",
-  "version": "1.0.0-pre1",
+  "version": "1.0.0",
   "description": "Native interface to SQLite for PhoneGap/Cordova - cordova-sqlite-storage-commoncore version branch",
   "cordova": {
     "id": "cordova-sqlite-storage-commoncore",
